--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 				<img src="image/logo.png" alt="" />
 				猫寻鱼干
 			</div>
-			<a href='./test.html' class="item-uid">UID:10010</a>
+			<div class="item-uid">UID:10010</div>
 			
 			<div class="item-body">
 				<div class="body-left">
